fixing close side menu button on mobile

--- a/src/styles/MobileNavigation.module.scss
+++ b/src/styles/MobileNavigation.module.scss
@@ -36,6 +36,10 @@
     cursor: pointer;
     margin: 0 20px 0 0;
     z-index: 1001;
+
+    &.open {
+        color:#ffffff;
+    }
 }
 .overlay {
     position: fixed;
