--- a/src/styles/SideMenu.module.scss
+++ b/src/styles/SideMenu.module.scss
@@ -14,8 +14,9 @@
 }
 .container.open {
     right: 0;
+    z-index: 1000;
 }
 .divider {
-    width: 200px;
+    width: 100px;
     margin: 30px 0;
 }
