--- a/src/styles/YoutubeEmbed.module.scss
+++ b/src/styles/YoutubeEmbed.module.scss
@@ -4,6 +4,7 @@
     padding-bottom: 56.25%; /* 16:9 aspect ratio */
     height: 0;
     overflow: hidden;
+    z-index: 999;
   }
   
   .ytEmbed {
@@ -13,5 +14,6 @@
     width: 100%;
     height: 100%;
     border: 0;
+    z-index: 999;
   }
   
